Added pictures to the product listing html page, added shadow to the header to distinguish it from the rest of the page, as it is kept white

--- a/products.html
+++ b/products.html
@@ -42,34 +42,43 @@
 		</nav>
 		
 		<section class = "product-list">
-			<img class="category-banner" src = "img/product-category.png">
-			<div class ="drop-down">
-			<select>
-				<option class "dd-opt" value="volvo">Sort By</option>	
-	  			<option value="name">Alphabetical</option>
-	  			<option>Newly Released</option>
-	  			<option>Price: Higher</option>
-	 			<option>Price: Lower</option>
-			</select>
-		</div>
+			<img class="category-banner" src = "img/Funko/product-banner.png">
+			<div class = "refine">
+				<div class ="drop-down">
+					<select>
+						<option class "dd-opt" value="volvo">Sort By</option>	
+			  			<option value="name">Alphabetical</option>
+			  			<option>Newly Released</option>
+			  			<option>Price: Higher</option>
+			 			<option>Price: Lower</option>
+					</select>
+				</div>
+				<div class ="search-line">
+ 				<form id="search-bar" method="post" action="#">
+          		<input class="search comments" type="text" id="form-name" placeholder="Search">
+          		</form>
+          		<a href="#"><img class = "search-button" src = "img/search.png"></a>
+          		</div>
+          	</div>
+
 		</section>
 
 		<section class = "multi-list">
 			<div class = "item-box">
-				<a href ="view-item.html"><img class="multi-item" src = "img/item-place.png"></a>
+				<a href ="view-item.html"><img class="multi-item" src = "img/Funko/batman.png"></a>
 					<p class ="item-name">Pop! Heroes: Batman</p>
 	       			<p class ="item-number">Item: #2201</p>
 	       	</div>
 
 	       	<div class = "item-box">
-				<img class="multi-item" src = "img/item-place.png">
-					<p class ="item-name">Pop! Heroes: Batman</p>
-	       			<p class ="item-number">Item: #2201</p>
+				<img class="multi-item" src = "img/Funko/spiderman.png">
+					<p class ="item-name">Pop! Heroes: Spiderman</p>
+	       			<p class ="item-number">Item: #2206</p>
 	       	</div>
 
 			<div class = "item-box">
-				<img class="multi-item" src = "img/item-place.png">
-					<p class ="item-name">Pop! Heroes: Batman</p>
+				<img class="multi-item" src = "img/Funko/ironman.png">
+					<p class ="item-name">Pop! Heroes: Iron Man</p>
 	       			<p class ="item-number">Item: #2201</p>
 	       	</div>
 
