--- a/view-item.html
+++ b/view-item.html
@@ -50,14 +50,18 @@
 
 	<body>
 		<div id="popup_box">    
-	<!-- OUR PopupBox DIV-->    
-	 		<h1>This shizzle added to your cart-dizzle!</h1>     
-			 
-			<div class = "popup-nav">
-				<a id="popupBoxClose">Continue Shopping</a>
-				<a href ="purchase-item.html">View Cart</a>
+	<!-- OUR PopupBox DIV-->
+			<a id="popupBoxClose">X</a>    
+	 		<div class = "popup-item">
+	 			<img src = "img/Funko/batman.png" height ="100" width="100">
+	 			<div class ="pop-up-header">
+	 			<img class = "checkmark" src = "img/checkmark.png">
+	 			<h1>Item Added!</h1> 
+	 			</div>   
+	 		</div>
+	 		<div class = "popup-nav">
+				<a class="popup-checkout" href ="purchase-item.html">Checkout</a>
 			</div>
-		
 		</div> 
 		<header>
 			<div class = "logo">
@@ -82,7 +86,7 @@
 		
 		<div class = "item-all">
 			<section class = "view-item">
-				<img class = "item-picture" src = "img/view-item.png" height ="400" width="400" alt "item view">
+				<img class = "item-picture" src = "img/Funko/batman.png" height ="400" width="400" alt "item view">
 				<div class ="item-heading">
 					<h3 class= "item-header">Pop! Heroes: Batman</h3>
          		 	
@@ -105,21 +109,21 @@
 
 				<div class = "recommendation-box">	
 					<div class = "recommend-item-box">
-						<img class="multi-item" src = "img/item-place.png" height "200" width="125" alt= "recommendation item">
-						<p class ="item-name">Pop! Heroes: Batman</p>
-		       			<p class ="item-number">Item: #2201</p>
+						<img class="multi-item" src = "img/Funko/batman-dk.png" height "200" width="125" alt= "recommendation item">
+						<p class ="item-name">Pop! Heroes: Batman Dark Night</p>
+		       			<p class ="item-number">Item: #2210</p>
 		       		</div>
 
 		       		<div class = "recommend-item-box">
-						<img class="multi-item" src = "img/item-place.png" height "125" width="125" alt= "recommendation item">
-						<p class ="item-name">Pop! Heroes: Batman</p>
-		       			<p class ="item-number">Item: #2201</p>
+						<img class="multi-item" src = "img/Funko/nightwing.png" alt= "recommendation item">
+						<p class ="item-name">Pop! Heroes: Nightwing</p>
+		       			<p class ="item-number">Item: #2207</p>
 		       		</div>
 
 					<div class = "recommend-item-box">
-						<img class="multi-item" src = "img/item-place.png" height "125" width="125" alt= "recommendation item">
-						<p class ="item-name">Pop! Heroes: Batman</p>
-		       			<p class ="item-number">Item: #2201</p>
+						<img class="multi-item" src = "img/Funko/joker.png" height "125" width="125" alt= "recommendation item">
+						<p class ="item-name">Pop! Heroes: Arkham-Joker</p>
+		       			<p class ="item-number">Item: #2241</p>
 		       		</div>
 		       </div>
 
