put a shadow on the footer added two new navs for "new additions" and "sales" added a new heroes.html page and create a banner

--- a/products.html
+++ b/products.html
@@ -27,12 +27,14 @@
 	<div class = "multi-all">
 		<section class = "product-nav">
 				<p>Pop! Figures</p>
+				<a href = "funko-heroes.html" class="nav-button"> Pop! Heroes </a>
 				<a href = "#" class="nav-button"> Pop! Animation </a>
-				<a href = "#" class="nav-button"> Pop! Heroes </a>
 				<a href = "#" class="nav-button"> Pop! Disney </a>
 				<a href = "#" class="nav-button"> Pop! TV </a> 
 				<a href = "#" class="nav-button"> Pop! Movies </a> 
 				<a href = "#" class="nav-button"> Pop! Games </a>
+				<a href = "#" class="nav-button"> New Arrivals </a>
+				<a href = "#" class="nav-button"> Sales </a>
 		</section>
 
 		<nav class = "breadcrumbs">
@@ -65,7 +67,7 @@
 
 		<section class = "multi-list">
 			<div class = "item-box">
-				<a href ="view-item.html"><img class="multi-item" src = "img/Funko/batman.png"></a>
+				<a href ="view-item.html"><img class="multi-item" src = "img/Funko/batman.png" height="167" width="167" alt="batman funko with box"></a>
 					<p class ="item-name">Pop! Heroes: Batman</p>
 	       			<p class ="item-number">Item: #2201</p>
 	       	</div>
