added a special section in the product navigation that leads customers to new additions and specials

--- a/products.html
+++ b/products.html
@@ -33,8 +33,11 @@
 				<a href = "#" class="nav-button"> Pop! TV </a> 
 				<a href = "#" class="nav-button"> Pop! Movies </a> 
 				<a href = "#" class="nav-button"> Pop! Games </a>
-				<a href = "#" class="nav-button"> New Arrivals </a>
-				<a href = "#" class="nav-button"> Sales </a>
+				<div class = "deals-nav">
+					<p>Specials</p>
+					<a href = "#" class="nav-button"> New Arrivals </a>
+					<a href = "#" class="nav-button"> Sales </a>
+				</div>
 		</section>
 
 		<nav class = "breadcrumbs">
