- added all the images to the index page, - added text to the index page to balance with the images. For the new additions and sales, it inclues a title and a small description. For the events, the title is added. - 80% of the links are working. Need to link the events section

--- a/index.html
+++ b/index.html
@@ -23,31 +23,41 @@
 		</header>
 
 		<section class = "banner">
-			<img src="img/banner-place.png" alt="banner image">
+			<img src="img/home-banner.png" alt="banner image">
 		</section>
 
 		<section class = "features">
 			<div class = "new-additions feature-box">
-				<img src="img/sales-place.png">
-				<p class = "label"> New</p>
+				<a href ="products.html"><img src="img/new-addition.png">
+				<p class = "label"> New</p><a>
+				<p class= "new-description-header">Inside Out</p>
+				<p class= "new-description-paragraph"> Stylized versions of Pixar’s designs from the film — are capturing our emotions</p>
 			</div>
 
 			<div class = "sales feature-box">
-				<img src="img/sales-place.png">
-				<p class = "label"> Deals</p>
+				<a href = "products.html"><img src="img/sales.png">
+				<p class = "label"> Deals</p><a>
+				<p class= "new-description-header">Before It's Too Late</p>
+				<p class= "new-description-paragraph"> Sales on the six characters that were all created for the Big Hero Six team </p>
 			</div>
 		</section>
 
 		<section class = "events">
+			<h6 class= "small-header">Upcoming Events</h6>
 			<div class= "events-all">
 				<div class="events-grid  events-grid-first">
-					<img src="img/events-place.png" height ="121" width ="238">
+					<img src="img/events-comiccon.png" height ="170" width ="238">
+					<p class= "events-label"> San Diego Comic Con</p>
 				</div>
+				
 				<div class="events-grid  events-grid-mid">
-					<img src="img/events-place.png" height ="121" width ="238">
+					<img src="img/events-fanexpo.png" height ="170" width ="238">
+					<p class= "events-label"> Vancouver Fan Expo</p>
 				</div>
+				
 				<div class="events-grid events-grid-last">
-					<img src="img/events-place.png" height ="121" width ="238">
+					<img src="img/events-toyfair.png" height ="170" width ="238">
+					<p class= "events-label"> New York Toy Fair
 				</div>
 			</div>
 		</section>
