--- a/index.html
+++ b/index.html
@@ -27,23 +27,24 @@
 		</section>
 
 		<section class = "features">
+			<h6 class= "section-header">Offers</h6>
 			<div class = "new-additions feature-box">
 				<a href ="products.html"><img src="img/new-addition.png">
-				<p class = "label"> New</p><a>
+				<p class = "label"> New</p></a>
 				<p class= "new-description-header">Inside Out</p>
 				<p class= "new-description-paragraph"> Stylized versions of Pixar’s designs from the film — are capturing our emotions</p>
 			</div>
 
 			<div class = "sales feature-box">
 				<a href = "products.html"><img src="img/sales.png">
-				<p class = "label"> Deals</p><a>
+				<p class = "label">Deals</p></a>
 				<p class= "new-description-header">Before It's Too Late</p>
 				<p class= "new-description-paragraph"> Sales on the six characters that were all created for the Big Hero Six team </p>
 			</div>
 		</section>
 
 		<section class = "events">
-			<h6 class= "small-header">Upcoming Events</h6>
+			<h6 class= "section-header">Upcoming Events</h6>
 			<div class= "events-all">
 				<div class="events-grid  events-grid-first">
 					<img src="img/events-comiccon.png" height ="170" width ="238">
