--- a/products.html
+++ b/products.html
@@ -39,14 +39,13 @@
 					<a href = "#" class="nav-button"> Sales </a>
 				</div>
 		</section>
-
-		<nav class = "breadcrumbs">
+		
+		<section class = "product-list">
+			<nav class = "breadcrumbs">
 				<a href ="index.html" class= "bc-home">Home</a> 
 				<p class = "bc-break"> // </p>
 				<a href = "#" class = "bc-products bc-current">Products</a>
-		</nav>
-		
-		<section class = "product-list">
+			</nav>
 			<img class="category-banner" src = "img/Funko/product-banner.png">
 			<div class = "refine">
 				<div class ="drop-down">
@@ -70,7 +69,7 @@
 
 		<section class = "multi-list">
 			<div class = "item-box">
-				<a href ="view-item.html"><img class="multi-item" src = "img/Funko/batman.png" height="167" width="167" alt="batman funko with box"></a>
+				<a href ="view-item.html"><img class="multi-item" src = "img/Funko/batman.png" alt="batman funko with box"></a>
 					<p class ="item-name">Pop! Heroes: Batman</p>
 	       			<p class ="item-number">Item: #2201</p>
 	       	</div>
@@ -87,8 +86,8 @@
 	       			<p class ="item-number">Item: #2201</p>
 	       	</div>
 
-			<div class = "item-box">
-				<img class="multi-item" src = "img/item-place.png">
+			<div class = "item-box item-box-last">
+				<img class="multi-item" src = "img/Funko/joy.png">
 					<p class ="item-name">Pop! Heroes: Batman</p>
 	       			<p class ="item-number">Item: #2201</p>
 	       	</div>
