responsive and mobile adaptability fixes were made to avoid any glitches

--- a/products.html
+++ b/products.html
@@ -74,6 +74,29 @@
 	       			<p class ="item-number">Item: #2201</p>
 	       	</div>
 
+	       	<div class = "item-box item-box-tab-last">
+				<img class="multi-item" src = "img/Funko/spiderman.png">
+					<p class ="item-name">Pop! Heroes: Spiderman</p>
+	       			<p class ="item-number">Item: #2206</p>
+	       	</div>
+
+			<div class = "item-box">
+				<img class="multi-item" src = "img/Funko/ironman.png">
+					<p class ="item-name">Pop! Heroes: Iron Man</p>
+	       			<p class ="item-number">Item: #2201</p>
+	       	</div>
+
+			<div class = "item-box item-box-last">
+				<img class="multi-item" src = "img/Funko/joy.png">
+					<p class ="item-name">Pop! Heroes: Batman</p>
+	       			<p class ="item-number">Item: #2201</p>
+	       	</div>
+	       					<div class = "item-box">
+				<a href ="view-item.html"><img class="multi-item" src = "img/Funko/batman.png" alt="batman funko with box"></a>
+					<p class ="item-name">Pop! Heroes: Batman</p>
+	       			<p class ="item-number">Item: #2201</p>
+	       	</div>
+
 	       	<div class = "item-box">
 				<img class="multi-item" src = "img/Funko/spiderman.png">
 					<p class ="item-name">Pop! Heroes: Spiderman</p>
@@ -91,50 +114,27 @@
 					<p class ="item-name">Pop! Heroes: Batman</p>
 	       			<p class ="item-number">Item: #2201</p>
 	       	</div>
-	       				<div class = "item-box">
-				<img class="multi-item" src = "img/item-place.png">
+
+	       	<div class = "item-box">
+				<a href ="view-item.html"><img class="multi-item" src = "img/Funko/batman.png" alt="batman funko with box"></a>
 					<p class ="item-name">Pop! Heroes: Batman</p>
 	       			<p class ="item-number">Item: #2201</p>
 	       	</div>
 
 	       	<div class = "item-box">
-				<img class="multi-item" src = "img/item-place.png">
-					<p class ="item-name">Pop! Heroes: Batman</p>
-	       			<p class ="item-number">Item: #2201</p>
+				<img class="multi-item" src = "img/Funko/spiderman.png">
+					<p class ="item-name">Pop! Heroes: Spiderman</p>
+	       			<p class ="item-number">Item: #2206</p>
 	       	</div>
 
 			<div class = "item-box">
-				<img class="multi-item" src = "img/item-place.png">
-					<p class ="item-name">Pop! Heroes: Batman</p>
+				<img class="multi-item" src = "img/Funko/ironman.png">
+					<p class ="item-name">Pop! Heroes: Iron Man</p>
 	       			<p class ="item-number">Item: #2201</p>
 	       	</div>
 
-			<div class = "item-box">
-				<img class="multi-item" src = "img/item-place.png">
-					<p class ="item-name">Pop! Heroes: Batman</p>
-	       			<p class ="item-number">Item: #2201</p>
-	       	</div>
-
-	       	<div class = "item-box">
-				<img class="multi-item" src = "img/item-place.png">
-					<p class ="item-name">Pop! Heroes: Batman</p>
-	       			<p class ="item-number">Item: #2201</p>
-	       	</div>
-
-	       	<div class = "item-box">
-				<img class="multi-item" src = "img/item-place.png">
-					<p class ="item-name">Pop! Heroes: Batman</p>
-	       			<p class ="item-number">Item: #2201</p>
-	       	</div>
-
-			<div class = "item-box">
-				<img class="multi-item" src = "img/item-place.png">
-					<p class ="item-name">Pop! Heroes: Batman</p>
-	       			<p class ="item-number">Item: #2201</p>
-	       	</div>
-
-			<div class = "item-box">
-				<img class="multi-item" src = "img/item-place.png">
+			<div class = "item-box item-box-last">
+				<img class="multi-item" src = "img/Funko/joy.png">
 					<p class ="item-name">Pop! Heroes: Batman</p>
 	       			<p class ="item-number">Item: #2201</p>
 	       	</div>
