--- a/products.html
+++ b/products.html
@@ -69,73 +69,80 @@
 
 		<section class = "multi-list">
 			<div class = "item-box">
-				<a href ="view-item.html"><img class="multi-item" src = "img/Funko/batman.png" alt="batman funko with box"></a>
-					<p class ="item-name">Pop! Heroes: Batman</p>
-	       			<p class ="item-number">Item: #2201</p>
+				<a href ="view-item.html"><img class="multi-item" src = "img/Funko/joy.png" alt="batman funko with box"></a>
+					<p class ="offer-label"> New!</p>
+					<p class ="item-name">Pop! Disney: Joy</p>
+	       			<p class ="item-number">Item: #2501</p>
 	       	</div>
 
 	       	<div class = "item-box item-box-tab-last">
-				<img class="multi-item" src = "img/Funko/spiderman.png">
-					<p class ="item-name">Pop! Heroes: Spiderman</p>
-	       			<p class ="item-number">Item: #2206</p>
+				<img class="multi-item" src = "img/Funko/sadness.png">
+					<p class ="offer-label"> New!</p>
+					<p class ="item-name">Pop! Disney: Sadness</p>
+	       			<p class ="item-number">Item: #2502</p>
 	       	</div>
 
 			<div class = "item-box">
-				<img class="multi-item" src = "img/Funko/ironman.png">
-					<p class ="item-name">Pop! Heroes: Iron Man</p>
-	       			<p class ="item-number">Item: #2201</p>
+				<img class="multi-item" src = "img/Funko/disgust.png">
+					<p class ="offer-label"> New!</p>
+					<p class ="item-name">Pop! Disney: Disgust</p>
+	       			<p class ="item-number">Item: #2503</p>
 	       	</div>
 
 			<div class = "item-box item-box-last">
-				<img class="multi-item" src = "img/Funko/joy.png">
-					<p class ="item-name">Pop! Heroes: Batman</p>
-	       			<p class ="item-number">Item: #2201</p>
+				<img class="multi-item" src = "img/Funko/anger.png">
+					<p class ="offer-label"> New!</p>
+					<p class ="item-name">Pop! Disney: Anger</p>
+	       			<p class ="item-number">Item: #2501</p>
 	       	</div>
 	       					<div class = "item-box">
-				<a href ="view-item.html"><img class="multi-item" src = "img/Funko/batman.png" alt="batman funko with box"></a>
+				<a href ="view-item.html"><img class="multi-item" src = "img/Funko/fear.png" alt="batman funko with box"></a>
+					<p class ="offer-label"> New!</p>
+					<p class ="item-name">Pop! Disney: Fear</p>
+	       			<p class ="item-number">Item: #2502</p>
+	       	</div>
+
+	       	<div class = "item-box">
+				<img class="multi-item" src = "img/Funko/batman.png">
 					<p class ="item-name">Pop! Heroes: Batman</p>
+	       			<p class ="item-number">Item: #2503</p>
+	       	</div>
+
+			<div class = "item-box">
+				<img class="multi-item" src = "img/Funko/spiderman.png">
+					<p class ="item-name">Pop! Heroes: Spiderman</p>
+	       			<p class ="item-number">Item: #2504</p>
+	       	</div>
+
+			<div class = "item-box item-box-last">
+				<img class="multi-item" src = "img/Funko/ironman.png">
+					<p class ="item-name">Pop! Heroes: Ironman</p>
+	       			<p class ="item-number">Item: #2505</p>
+	       	</div>
+
+	       	<div class = "item-box">
+				<a href ="view-item.html"><img class="multi-item" src = "img/Funko/gogo.png" alt="batman funko with box"></a>
+					<p class ="offer-label sale"> Sale!</p>	
+					<p class ="item-name">Pop! Disney: Go Go</p>
 	       			<p class ="item-number">Item: #2201</p>
 	       	</div>
 
 	       	<div class = "item-box">
-				<img class="multi-item" src = "img/Funko/spiderman.png">
-					<p class ="item-name">Pop! Heroes: Spiderman</p>
+				<img class="multi-item" src = "img/Funko/honeylemon.png">
+					<p class ="offer-label sale"> Sale!</p>
+					<p class ="item-name">Pop! Disney: Honey Lemon</p>
 	       			<p class ="item-number">Item: #2206</p>
 	       	</div>
 
 			<div class = "item-box">
-				<img class="multi-item" src = "img/Funko/ironman.png">
-					<p class ="item-name">Pop! Heroes: Iron Man</p>
+				<img class="multi-item" src = "img/Funko/fredflinstone.png">
+					<p class ="item-name">Pop! Animation: Fred Flinstone</p>
 	       			<p class ="item-number">Item: #2201</p>
 	       	</div>
 
 			<div class = "item-box item-box-last">
-				<img class="multi-item" src = "img/Funko/joy.png">
-					<p class ="item-name">Pop! Heroes: Batman</p>
-	       			<p class ="item-number">Item: #2201</p>
-	       	</div>
-
-	       	<div class = "item-box">
-				<a href ="view-item.html"><img class="multi-item" src = "img/Funko/batman.png" alt="batman funko with box"></a>
-					<p class ="item-name">Pop! Heroes: Batman</p>
-	       			<p class ="item-number">Item: #2201</p>
-	       	</div>
-
-	       	<div class = "item-box">
-				<img class="multi-item" src = "img/Funko/spiderman.png">
-					<p class ="item-name">Pop! Heroes: Spiderman</p>
-	       			<p class ="item-number">Item: #2206</p>
-	       	</div>
-
-			<div class = "item-box">
-				<img class="multi-item" src = "img/Funko/ironman.png">
-					<p class ="item-name">Pop! Heroes: Iron Man</p>
-	       			<p class ="item-number">Item: #2201</p>
-	       	</div>
-
-			<div class = "item-box item-box-last">
-				<img class="multi-item" src = "img/Funko/joy.png">
-					<p class ="item-name">Pop! Heroes: Batman</p>
+				<img class="multi-item" src = "img/Funko/stewie.png">
+					<p class ="item-name">Pop! Animation: Stewie</p>
 	       			<p class ="item-number">Item: #2201</p>
 	       	</div>
 		</section>
