Fixed navigation and layout problems. Made it consisted with the main product page

--- a/funko-heroes.html
+++ b/funko-heroes.html
@@ -1,3 +1,5 @@
+
+
 <!doctype html>
 <html lang="en">
 	<head>
@@ -27,25 +29,27 @@
 	<div class = "multi-all">
 		<section class = "product-nav">
 				<p>Pop! Figures</p>
-				<a href = "#" class="nav-button"> Pop! Heroes </a>
+				<a href = "funko-heroes.html" class="nav-button"> Pop! Heroes </a>
 				<a href = "#" class="nav-button"> Pop! Animation </a>
 				<a href = "#" class="nav-button"> Pop! Disney </a>
 				<a href = "#" class="nav-button"> Pop! TV </a> 
 				<a href = "#" class="nav-button"> Pop! Movies </a> 
 				<a href = "#" class="nav-button"> Pop! Games </a>
+				<div class = "deals-nav">
+					<p>Specials</p>
+					<a href = "#" class="nav-button"> New Arrivals </a>
+					<a href = "#" class="nav-button"> Sales </a>
+				</div>
 		</section>
-
-		<nav class = "breadcrumbs">
+		
+		<section class = "product-list">
+			<nav class = "breadcrumbs">
 				<a href ="index.html" class= "bc-home">Home</a> 
 				<p class = "bc-break"> // </p>
 				<a href = "#" class = "bc-products bc-current">Products</a>
-		</nav>
-		
-		<section class = "product-list">
-			<div class = "over-banner">
-				<img class="category-banner" src = "img/Funko/hero-product-banner.png">
-				<p class = "over-banner-label"> Pop! Heroes</p>
-			</div>
+			</nav>
+			<img class="category-banner" src = "img/Funko/hero-product-banner.png">
+			<p class = "over-banner-label"> Pop! Heroes</p>
 			<div class = "refine">
 				<div class ="drop-down">
 					<select>
@@ -68,73 +72,79 @@
 
 		<section class = "multi-list">
 			<div class = "item-box">
-				<a href ="view-item.html"><img class="multi-item" src = "img/Funko/batman.png" height="167" width="167" alt="batman funko with box"></a>
+				<a href ="view-item.html"><img class="multi-item" src = "img/Funko/joy.png" alt="batman funko with box"></a>
+					<p class ="offer-label"> New!</p>
+					<p class ="item-name">Pop! Disney: Joy</p>
+	       			<p class ="item-number">Item: #2501</p>
+	       	</div>
+
+	       	<div class = "item-box item-box-tab-last">
+				<img class="multi-item" src = "img/Funko/sadness.png">
+					<p class ="offer-label"> New!</p>
+					<p class ="item-name">Pop! Disney: Sadness</p>
+	       			<p class ="item-number">Item: #2502</p>
+	       	</div>
+
+			<div class = "item-box">
+				<img class="multi-item" src = "img/Funko/disgust.png">
+					<p class ="offer-label"> New!</p>
+					<p class ="item-name">Pop! Disney: Disgust</p>
+	       			<p class ="item-number">Item: #2503</p>
+	       	</div>
+
+			<div class = "item-box item-box-last">
+				<img class="multi-item" src = "img/Funko/anger.png">
+					<p class ="offer-label"> New!</p>
+					<p class ="item-name">Pop! Disney: Anger</p>
+	       			<p class ="item-number">Item: #2501</p>
+	       	</div>
+	       					<div class = "item-box">
+				<a href ="view-item.html"><img class="multi-item" src = "img/Funko/fear.png" alt="batman funko with box"></a>
+					<p class ="offer-label"> New!</p>
+					<p class ="item-name">Pop! Disney: Fear</p>
+	       			<p class ="item-number">Item: #2502</p>
+	       	</div>
+	       		       	<div class = "item-box">
+				<img class="multi-item" src = "img/Funko/batman.png">
 					<p class ="item-name">Pop! Heroes: Batman</p>
+	       			<p class ="item-number">Item: #2503</p>
+	       	</div>
+
+			<div class = "item-box">
+				<img class="multi-item" src = "img/Funko/spiderman.png">
+					<p class ="item-name">Pop! Heroes: Spiderman</p>
+	       			<p class ="item-number">Item: #2504</p>
+	       	</div>
+
+			<div class = "item-box item-box-last">
+				<img class="multi-item" src = "img/Funko/ironman.png">
+					<p class ="item-name">Pop! Heroes: Ironman</p>
+	       			<p class ="item-number">Item: #2505</p>
+	       	</div>
+
+	       	<div class = "item-box">
+				<a href ="view-item.html"><img class="multi-item" src = "img/Funko/gogo.png" alt="batman funko with box"></a>
+					<p class ="offer-label sale"> Sale!</p>	
+					<p class ="item-name">Pop! Disney: Go Go</p>
 	       			<p class ="item-number">Item: #2201</p>
 	       	</div>
 
 	       	<div class = "item-box">
-				<img class="multi-item" src = "img/Funko/spiderman.png">
-					<p class ="item-name">Pop! Heroes: Spiderman</p>
+				<img class="multi-item" src = "img/Funko/honeylemon.png">
+					<p class ="offer-label sale"> Sale!</p>
+					<p class ="item-name">Pop! Disney: Honey Lemon</p>
 	       			<p class ="item-number">Item: #2206</p>
 	       	</div>
 
 			<div class = "item-box">
-				<img class="multi-item" src = "img/Funko/ironman.png">
-					<p class ="item-name">Pop! Heroes: Iron Man</p>
+				<img class="multi-item" src = "img/Funko/fredflinstone.png">
+					<p class ="item-name">Pop! Animation: Fred Flinstone</p>
 	       			<p class ="item-number">Item: #2201</p>
 	       	</div>
 
-			<div class = "item-box">
-				<img class="multi-item" src = "img/item-place.png">
-					<p class ="item-name">Pop! Heroes: Batman</p>
-	       			<p class ="item-number">Item: #2201</p>
-	       	</div>
-	       				<div class = "item-box">
-				<img class="multi-item" src = "img/item-place.png">
-					<p class ="item-name">Pop! Heroes: Batman</p>
-	       			<p class ="item-number">Item: #2201</p>
-	       	</div>
-
-	       	<div class = "item-box">
-				<img class="multi-item" src = "img/item-place.png">
-					<p class ="item-name">Pop! Heroes: Batman</p>
-	       			<p class ="item-number">Item: #2201</p>
-	       	</div>
-
-			<div class = "item-box">
-				<img class="multi-item" src = "img/item-place.png">
-					<p class ="item-name">Pop! Heroes: Batman</p>
-	       			<p class ="item-number">Item: #2201</p>
-	       	</div>
-
-			<div class = "item-box">
-				<img class="multi-item" src = "img/item-place.png">
-					<p class ="item-name">Pop! Heroes: Batman</p>
-	       			<p class ="item-number">Item: #2201</p>
-	       	</div>
-
-	       	<div class = "item-box">
-				<img class="multi-item" src = "img/item-place.png">
-					<p class ="item-name">Pop! Heroes: Batman</p>
-	       			<p class ="item-number">Item: #2201</p>
-	       	</div>
-
-	       	<div class = "item-box">
-				<img class="multi-item" src = "img/item-place.png">
-					<p class ="item-name">Pop! Heroes: Batman</p>
-	       			<p class ="item-number">Item: #2201</p>
-	       	</div>
-
-			<div class = "item-box">
-				<img class="multi-item" src = "img/item-place.png">
-					<p class ="item-name">Pop! Heroes: Batman</p>
-	       			<p class ="item-number">Item: #2201</p>
-	       	</div>
-
-			<div class = "item-box">
-				<img class="multi-item" src = "img/item-place.png">
-					<p class ="item-name">Pop! Heroes: Batman</p>
+			<div class = "item-box item-box-last">
+				<img class="multi-item" src = "img/Funko/stewie.png">
+					<p class ="item-name">Pop! Animation: Stewie</p>
 	       			<p class ="item-number">Item: #2201</p>
 	       	</div>
 		</section>
@@ -156,6 +166,8 @@
 		</section>
 
 	</body>
+
+
 
 <script>
     window.addEventListener('load', function load() {
