Creating the responsive and adaptive aspects of the view-item.html, the main item section is complete in being responsive and adaptive

--- a/view-item.html
+++ b/view-item.html
@@ -53,7 +53,7 @@
 	<!-- OUR PopupBox DIV-->
 			<a id="popupBoxClose">X</a>    
 	 		<div class = "popup-item">
-	 			<img src = "img/Funko/batman.png" height ="100" width="100">
+	 			<img src = "img/Funko/joy.png" height ="100" width="100">
 	 			<div class ="pop-up-header">
 	 			<img class = "checkmark" src = "img/checkmark.png">
 	 			<h1>Item Added!</h1> 
@@ -74,19 +74,20 @@
 				<a class ="head-nav" href = "#"> Events </a> 
 			</nav>
 		</header>
-
-		<nav class = "item-breadcrumbs">
+		
+		<div class = "item-all">
+			<nav class = "item-breadcrumbs">
 				<a href ="index.html" class= "bc-home">Home</a> 
 				<p class = "bc-break"> // </p>
 				<a href = "products.html" class = "bc-products">Products</a>
 				<p class = "bc-break"> // </p>
 				<a href = "#" class = "bc-products">Pop! Heroes</a><p class = "bc-break"> // </p>
 				<a href = "#" class = "bc-current">Pop! Heroes: Batman</a>
-		</nav>
-		
-		<div class = "item-all">
+			</nav>
 			<section class = "view-item">
-				<img class = "item-picture" src = "img/Funko/batman.png" height ="400" width="400" alt "item view">
+				<div class = "item-picture">
+					<img  src = "img/Funko/joy.png" alt "item view">
+				</div>
 				<div class ="item-heading">
 					<h3 class= "item-header">Pop! Heroes: Batman</h3>
          		 	
