Images for the purchase-item.html have been added. minor design changes to the review box to fit the size of the image

--- a/purchase-item.html
+++ b/purchase-item.html
@@ -32,12 +32,13 @@
 			<div class= "cart-all">
 				<div class= "cart">
 					<div class="item-wrapper">
-						<img class="review-item" src = "img/Funko/batman.png" height "125" width="125" alt= "recommendation item">
+						<img class="review-item" src = "img/Funko/joy.png" alt= "recommendation item">
 					</div>
 
 					<div class="cart-details">
 						<div class="cart-item">	
-							<p>Pop! Heroes: Batman</p>
+							<p class="cart-label">Name</p>
+							<p>Pop! Disney: Joy</p>
 						</div>
 						<div class="cart-item cart-number">
 							<p class="cart-label">Qty</p>
@@ -95,7 +96,7 @@
 							<p class = "half-input-label input-label">Phone Number</P>
 	        			
 	        			 <div class ="drop-down-details">
-	        				 <select class = "detail-country">
+	        				 <select class = "detail-dropdown">
 								<option class "detail-opt" value="country">Choose One</option>	
 					  			<option value="name">Australia</option>
 					  			<option>Canada</option>
@@ -113,7 +114,7 @@
 	  					<h4 class= "detail-header">Payment Information</h4>
 		    			
 		    			<div class ="drop-down-details  drop-down-card">
-		    				<select class = "detail-card">
+		    				<select class = "detail-dropdown">
 								<option class "detail-opt" value="country">Card Type</option>	
 		  						<option value="name">Mastercard</option>
 		  						<option>Visa</option>
