--- a/index.html
+++ b/index.html
@@ -47,17 +47,17 @@
 			<h6 class= "section-header">Upcoming Events</h6>
 			<div class= "events-all">
 				<div class="events-grid  events-grid-first">
-					<img src="img/events-comiccon.png" height ="170" width ="238">
+					<a href = "events1.html"><img src="img/events-comiccon.png" height ="170" width ="238"></a>
 					<p class= "events-label"> San Diego Comic Con</p>
 				</div>
 				
 				<div class="events-grid  events-grid-mid">
-					<img src="img/events-fanexpo.png" height ="170" width ="238">
+					<a href = "events1.html"><img src="img/events-fanexpo.png" height ="170" width ="238"></a>
 					<p class= "events-label"> Vancouver Fan Expo</p>
 				</div>
 				
 				<div class="events-grid events-grid-last">
-					<img src="img/events-toyfair.png" height ="170" width ="238">
+					<a href = "events1.html"><img src="img/events-toyfair.png" height ="170" width ="238"></a>
 					<p class= "events-label"> New York Toy Fair
 				</div>
 			</div>
@@ -76,6 +76,10 @@
 			<img src="img/twitter.png" height ="30" width="30"alt="funko logo">
 			<img src="img/instagram.png" height ="30" width="30" alt="funko logo">
 		</div>
+
+		<div class = "extras">
+			<p class = "extra-content"> Content </p>
+			<p class = "extra-content"> Style Guide </p>
 		</section>
 
 	</body>
