Code Clean up - changed all the footer to be consistent in each of the pages - changed all the image alt tags to describe the image

--- a/about.html
+++ b/about.html
@@ -126,19 +126,23 @@
 		</section>
 <!--END OF STAFF INTRO-->
 <!--FOOTER-->
-		 	<section class = "footer">
+<section class = "footer">
 		<img class="footer-img" src="img/funko.png" height="50" width="100" alt="funko logo">
 		  <div class = "email">
 		   <form id="comments" method="post" action="#">
           <input class="comments" type="text" id="form-name" placeholder="Enter your email"> <a href ="#" class = "email-button">Submit</a>
           </form>
-      		</div>
+      </div>
 		
 		<div class ="footer-icons">
-			<img src="img/facebook.png" height ="30" width="30" alt="funko logo">
-			<img src="img/twitter.png" height ="30" width="30"alt="funko logo">
-			<img src="img/instagram.png" height ="30" width="30" alt="funko logo">
+			<img src="img/Footer/facebook.png" height ="30" width="30" alt="Facebook logo">
+			<img src="img/Footer/twitter.png" height ="30" width="30"alt="Twitter logo">
+			<img src="img/Footer/instagram.png" height ="30" width="30" alt="Instagram logo">
 		</div>
+
+		<div class = "extras">
+			<p class = "extra-content"> Content </p>
+			<p class = "extra-content"> Style Guide </p>
 		</section>
 <!--end of footer-->
 		
