--- a/events1.html
+++ b/events1.html
@@ -28,7 +28,7 @@
 		</header>
 
 		<section class = "banner">
-			<img src="img/events1-banner.png" alt="banner image">
+			<img src="img/Events/events1-banner.png" alt="banner that shows a Funko display at an event">
 			<div class = "banner-header">
 				<p class = "banner-title"> Van Fan Expo</p>
 				<p class = "banner-question"> What is that?</p>
@@ -61,28 +61,28 @@
 
 <!--LOCATION-->
 			<div class="grid-col-half">
-				<img class="picture-place" src="img/map.png" alt="team picture">
+				<img class="picture-place" src="img/Events/map.png" alt="Map of vancouver showing the convention center where the event is being held">
 			</div>
 		</section>
 			
 			<section class = "fan-expo-pics"</section>
 			<div class= "events-all">
 				<div class="fan-expo  fan-expo-first">
-					<img src="img/events-fanexpo.png" height ="170" width ="238">
+					<img src="img/Index/events-fanexpo.png" height ="170" width ="238" alt"Vancouver Fan expo picture">
 				</div>
 				
 				<div class="fan-expo fan-expo-mid">
-					<img src="img/events-fanexpo.png" height ="170" width ="238">
+					<img src="img/Index/events-fanexpo.png" height ="170" width ="238" alt"Vancouver Fan expo picture">
 				</div>
 				
 				<div class="fan-expo fan-expo-last">
-					<img src="img/events-fanexpo.png" height ="170" width ="238">
+					<img src="img/Index/events-fanexpo.png" height ="170" width ="238" alt"Vancouver Fan expo picture">
 				</div>
 			</div>
 		</section>
 
 	<!--FOOTER-->
-		<section class = "footer">
+<section class = "footer">
 		<img class="footer-img" src="img/funko.png" height="50" width="100" alt="funko logo">
 		  <div class = "email">
 		   <form id="comments" method="post" action="#">
@@ -91,11 +91,14 @@
       </div>
 		
 		<div class ="footer-icons">
-			<img src="img/facebook.png" height ="30" width="30" alt="funko logo">
-			<img src="img/twitter.png" height ="30" width="30"alt="funko logo">
-			<img src="img/instagram.png" height ="30" width="30" alt="funko logo">
+			<img src="img/Footer/facebook.png" height ="30" width="30" alt="Facebook logo">
+			<img src="img/Footer/twitter.png" height ="30" width="30"alt="Twitter logo">
+			<img src="img/Footer/instagram.png" height ="30" width="30" alt="Instagram logo">
 		</div>
 
+		<div class = "extras">
+			<p class = "extra-content"> Content </p>
+			<p class = "extra-content"> Style Guide </p>
 		</section>
 <!--end of footer-->
 
