--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
       </div>
 		
 		<div class ="footer-icons">
-			<img src="img/facebook.png" height ="30" width="30" alt="Facebook logo">
-			<img src="img/twitter.png" height ="30" width="30"alt="Twitter logo">
-			<img src="img/instagram.png" height ="30" width="30" alt="Instagram logo">
+			<img src="img/Footer/facebook.png" height ="30" width="30" alt="Facebook logo">
+			<img src="img/Footer/twitter.png" height ="30" width="30"alt="Twitter logo">
+			<img src="img/Footer/instagram.png" height ="30" width="30" alt="Instagram logo">
 		</div>
 
 		<div class = "extras">
