Code clean up includes - deleting all of the links to Crimson text as we arent using that font anymore - linking the images to the correct folder after moving the images to subfolders found in new folders pertaining to the html page - new footer integration because of the new addition - image alt tags now describe all the images that it is placed in

--- a/funko-heroes.html
+++ b/funko-heroes.html
@@ -1,5 +1,3 @@
-
-
 <!doctype html>
 <html lang="en">
 	<head>
@@ -9,8 +7,8 @@
 
 		<link rel="stylesheet" href="css/main.css">
 		<link rel="stylesheet" href="css/product.css">
+		
 		<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet' type='text/css'>
-		<link href='http://fonts.googleapis.com/css?family=Crimson+Text' rel='stylesheet' type='text/css'>
 	</head>	
 
 	<body>
@@ -48,7 +46,7 @@
 				<p class = "bc-break"> // </p>
 				<a href = "#" class = "bc-products bc-current">Products</a>
 			</nav>
-			<img class="category-banner" src = "img/Funko/hero-product-banner.png">
+			<img class="category-banner" src = "img/Products/Funko/hero-product-banner.png" alt"Funko banner with some of the pop hero figures">
 			<p class = "over-banner-label"> Pop! Heroes</p>
 			<div class = "refine">
 				<div class ="drop-down">
@@ -72,78 +70,79 @@
 
 		<section class = "multi-list">
 			<div class = "item-box">
-				<a href ="view-item.html"><img class="multi-item" src = "img/Funko/joy.png" alt="batman funko with box"></a>
+				<a href ="view-item.html"><img class="multi-item" src = "img/Products/Funko/joy.png" alt="joy funko with box"></a>
 					<p class ="offer-label"> New!</p>
 					<p class ="item-name">Pop! Disney: Joy</p>
 	       			<p class ="item-number">Item: #2501</p>
 	       	</div>
 
 	       	<div class = "item-box item-box-tab-last">
-				<img class="multi-item" src = "img/Funko/sadness.png">
+				<img class="multi-item" src = "img/Products/Funko/sadness.png" alt="Sadness funko with box">
 					<p class ="offer-label"> New!</p>
 					<p class ="item-name">Pop! Disney: Sadness</p>
 	       			<p class ="item-number">Item: #2502</p>
 	       	</div>
 
 			<div class = "item-box">
-				<img class="multi-item" src = "img/Funko/disgust.png">
+				<img class="multi-item" src = "img/Products/Funko/disgust.png" alt"Disgust Funko with box">
 					<p class ="offer-label"> New!</p>
 					<p class ="item-name">Pop! Disney: Disgust</p>
 	       			<p class ="item-number">Item: #2503</p>
 	       	</div>
 
 			<div class = "item-box item-box-last">
-				<img class="multi-item" src = "img/Funko/anger.png">
+				<img class="multi-item" src = "img/Products/Funko/anger.png" alt="anger Funko with box">
 					<p class ="offer-label"> New!</p>
 					<p class ="item-name">Pop! Disney: Anger</p>
 	       			<p class ="item-number">Item: #2501</p>
 	       	</div>
-	       					<div class = "item-box">
-				<a href ="view-item.html"><img class="multi-item" src = "img/Funko/fear.png" alt="batman funko with box"></a>
+	       	<div class = "item-box">
+				<a href ="view-item.html"><img class="multi-item" src = "img/Products/Funko/fear.png" alt="Fear funko with box"></a>
 					<p class ="offer-label"> New!</p>
 					<p class ="item-name">Pop! Disney: Fear</p>
 	       			<p class ="item-number">Item: #2502</p>
 	       	</div>
-	       		       	<div class = "item-box">
-				<img class="multi-item" src = "img/Funko/batman.png">
+
+	       	<div class = "item-box">
+				<img class="multi-item" src = "img/Products/Funko/batman.png" alt"Batman Funko with box">
 					<p class ="item-name">Pop! Heroes: Batman</p>
 	       			<p class ="item-number">Item: #2503</p>
 	       	</div>
 
 			<div class = "item-box">
-				<img class="multi-item" src = "img/Funko/spiderman.png">
+				<img class="multi-item" src = "img/Products/Funko/spiderman.png" alt"spiderman funko with box">
 					<p class ="item-name">Pop! Heroes: Spiderman</p>
 	       			<p class ="item-number">Item: #2504</p>
 	       	</div>
 
 			<div class = "item-box item-box-last">
-				<img class="multi-item" src = "img/Funko/ironman.png">
+				<img class="multi-item" src = "img/Products/Funko/ironman.png" alt="ironman funko with box">
 					<p class ="item-name">Pop! Heroes: Ironman</p>
 	       			<p class ="item-number">Item: #2505</p>
 	       	</div>
 
 	       	<div class = "item-box">
-				<a href ="view-item.html"><img class="multi-item" src = "img/Funko/gogo.png" alt="batman funko with box"></a>
+				<a href ="view-item.html"><img class="multi-item" src = "img/Products/Funko/gogo.png" alt="GoGo funko with box"></a>
 					<p class ="offer-label sale"> Sale!</p>	
 					<p class ="item-name">Pop! Disney: Go Go</p>
 	       			<p class ="item-number">Item: #2201</p>
 	       	</div>
 
 	       	<div class = "item-box">
-				<img class="multi-item" src = "img/Funko/honeylemon.png">
+				<img class="multi-item" src = "img/Products/Funko/honeylemon.png" alt"HoneyLemon Funko with box">
 					<p class ="offer-label sale"> Sale!</p>
 					<p class ="item-name">Pop! Disney: Honey Lemon</p>
 	       			<p class ="item-number">Item: #2206</p>
 	       	</div>
 
 			<div class = "item-box">
-				<img class="multi-item" src = "img/Funko/fredflinstone.png">
+				<img class="multi-item" src = "img/Products/Funko/fredflinstone.png" alt"Fred flinstone with box">
 					<p class ="item-name">Pop! Animation: Fred Flinstone</p>
 	       			<p class ="item-number">Item: #2201</p>
 	       	</div>
 
 			<div class = "item-box item-box-last">
-				<img class="multi-item" src = "img/Funko/stewie.png">
+				<img class="multi-item" src = "img/Products/Funko/stewie.png" alt"stewie funko with box">
 					<p class ="item-name">Pop! Animation: Stewie</p>
 	       			<p class ="item-number">Item: #2201</p>
 	       	</div>
@@ -159,10 +158,14 @@
       </div>
 		
 		<div class ="footer-icons">
-			<img src="img/facebook.png" height ="30" width="30" alt="funko logo">
-			<img src="img/twitter.png" height ="30" width="30"alt="funko logo">
-			<img src="img/instagram.png" height ="30" width="30" alt="funko logo">
+			<img src="img/Footer/facebook.png" height ="30" width="30" alt="Facebook logo">
+			<img src="img/Footer/twitter.png" height ="30" width="30"alt="Twitter logo">
+			<img src="img/Footer/instagram.png" height ="30" width="30" alt="Instagram logo">
 		</div>
+
+		<div class = "extras">
+			<p class = "extra-content"> Content </p>
+			<p class = "extra-content"> Style Guide </p>
 		</section>
 
 	</body>
