--- a/purchase-item.html
+++ b/purchase-item.html
@@ -13,7 +13,7 @@
 		<script type="text/javascript" src="js/clear-default-text.js"></script>
 		
 		<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet' type='text/css'>
-		<link href='http://fonts.googleapis.com/css?family=Crimson+Text' rel='stylesheet' type='text/css'>
+
 	</head>
 	<body>
 		<header>
@@ -133,7 +133,7 @@
 			<div class= "cart-all">
 				<div class= "cart">
 					<div class="item-wrapper">
-						<img class="review-item" src = "img/Funko/joy.png" alt= "recommendation item">
+						<img class="review-item" src = "img/Products/Funko/joy.png" alt= "review item of joy funko with box">
 					</div>
 
 					<div class="cart-details">
