--- a/view-item.html
+++ b/view-item.html
@@ -7,8 +7,8 @@
 		<link rel="stylesheet" href="css/main.css">
 		<link rel="stylesheet" href="css/product.css">
 		<link rel="stylesheet" href="css/popup.css">
+		
 		<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet' type='text/css'>
-		<link href='http://fonts.googleapis.com/css?family=Crimson+Text' rel='stylesheet' type='text/css'>
 
 		<script src="http://jqueryjs.googlecode.com/files/jquery-1.2.6.min.js" type="text/javascript"></script>
 
@@ -53,9 +53,9 @@
 	<!-- OUR PopupBox DIV-->
 			<a id="popupBoxClose">X</a>    
 	 		<div class = "popup-item">
-	 			<img src = "img/Funko/joy.png" height ="100" width="100">
+	 			<img src = "img/Products/Funko/joy.png" height ="100" width="100" alt"Joy funko with box">
 	 			<div class ="pop-up-header">
-	 			<img class = "checkmark" src = "img/checkmark.png">
+	 			<img class = "checkmark" src = "img/Products/checkmark.png" alt"checkmark vector">
 	 			<h1>Item Added!</h1> 
 	 			</div>   
 	 		</div>
@@ -86,7 +86,7 @@
 			</nav>
 			<section class = "view-item">
 				<div class = "item-picture">
-					<img  src = "img/Funko/joy.png" alt "item view">
+					<img  src = "img/Products/Funko/joy.png" alt "item-view of joy funko with box">
 				</div>
 				<div class ="item-heading">
 					<h3 class= "item-header">Pop! Disney: Joy</h3>
@@ -110,19 +110,19 @@
 
 				<div class = "recommendation-box">	
 					<div class = "recommend-item-box">
-						<img class="multi-item" src = "img/Funko/fear.png"  alt= "recommendation item">
+						<img class="multi-item" src = "img/Products/Funko/fear.png"  alt= "recommendation item of Fear funko with box">
 						<p class ="item-name">Pop! Disney: Fear</p>
 		       			<p class ="item-number">Item: #2210</p>
 		       		</div>
 
 		       		<div class = "recommend-item-box">
-						<img class="multi-item" src = "img/Funko/anger.png" alt= "recommendation item">
+						<img class="multi-item" src = "img/Products/Funko/anger.png" alt= "recommendation item of Anger Funko with box">
 						<p class ="item-name">Pop! Disney: Anger</p>
 		       			<p class ="item-number">Item: #2207</p>
 		       		</div>
 
 					<div class = "recommend-item-box">
-						<img class="multi-item" src = "img/Funko/sadness.png" alt= "recommendation item">
+						<img class="multi-item" src = "img/Products/Funko/sadness.png" alt= "recommendation item of Sadness funko with box">
 						<p class ="item-name">Pop! Disney: Sadness</p>
 		       			<p class ="item-number">Item: #2241</p>
 		       		</div>
@@ -132,18 +132,22 @@
 		</div>
 
 		<section class = "footer">
-			<img class="footer-img" src="img/funko.png" height="50" width="100" alt="funko logo">
-			  <div class = "email">
-			   <form id="comments" method="post" action="#">
-	          <input class="comments" type="text" id="form-name" placeholder="Enter your email"> <a href ="#" class = "email-button">Submit</a>
-	          </form>
-	      </div>
-			
-			<div class ="footer-icons">
-				<img src="img/facebook.png" height ="30" width="30" alt="funko logo">
-				<img src="img/twitter.png" height ="30" width="30"alt="funko logo">
-				<img src="img/instagram.png" height ="30" width="30" alt="funko logo">
-			</div>
+		<img class="footer-img" src="img/funko.png" height="50" width="100" alt="funko logo">
+		  <div class = "email">
+		   <form id="comments" method="post" action="#">
+          <input class="comments" type="text" id="form-name" placeholder="Enter your email"> <a href ="#" class = "email-button">Submit</a>
+          </form>
+      </div>
+		
+		<div class ="footer-icons">
+			<img src="img/Footer/facebook.png" height ="30" width="30" alt="Facebook logo">
+			<img src="img/Footer/twitter.png" height ="30" width="30"alt="Twitter logo">
+			<img src="img/Footer/instagram.png" height ="30" width="30" alt="Instagram logo">
+		</div>
+
+		<div class = "extras">
+			<p class = "extra-content"> Content </p>
+			<p class = "extra-content"> Style Guide </p>
 		</section>
 	</body>
 
