Linked all images and navigation to the correct pages

--- a/products.html
+++ b/products.html
@@ -26,18 +26,19 @@
 
 	<div class = "multi-all">
 		<section class = "product-nav">
-				<p>Pop! Figures</p>
-				<a href = "funko-heroes.html" class="nav-button"> Pop! Heroes </a>
-				<a href = "#" class="nav-button"> Pop! Animation </a>
-				<a href = "#" class="nav-button"> Pop! Disney </a>
-				<a href = "#" class="nav-button"> Pop! TV </a> 
-				<a href = "#" class="nav-button"> Pop! Movies </a> 
-				<a href = "#" class="nav-button"> Pop! Games </a>
-				<div class = "deals-nav">
-					<p>Specials</p>
-					<a href = "#" class="nav-button"> New Arrivals </a>
-					<a href = "#" class="nav-button"> Sales </a>
-				</div>
+			<p>Pop! Figures</p>
+			<a href = "funko-heroes.html" class="nav-button"> Pop! Heroes </a>
+			<a href = "funko-heroes.html" class="nav-button"> Pop! Animation </a>
+			<a href = "funko-heroes.html" class="nav-button"> Pop! Disney </a>
+			<a href = "funko-heroes.html" class="nav-button"> Pop! TV </a> 
+			<a href = "funko-heroes.html" class="nav-button"> Pop! Movies </a> 
+			<a href = "funko-heroes.html" class="nav-button"> Pop! Games </a>
+			
+			<div class = "deals-nav">
+				<p>Specials</p>
+				<a href = "products.html" class="nav-button"> New Arrivals </a>
+				<a href = "products.html" class="nav-button"> Sales </a>
+			</div>
 		</section>
 		
 		<section class = "product-list">
@@ -77,21 +78,21 @@
 	       	</div>
 
 	       	<div class = "item-box item-box-tab-last">
-				<img class="multi-item" src = "img/Products/Funko/sadness.png" alt="Sadness funko with box">
+				<a href ="view-item.html"><img class="multi-item" src = "img/Products/Funko/sadness.png" alt="Sadness funko with box"></a>
 					<p class ="offer-label"> New!</p>
 					<p class ="item-name">Pop! Disney: Sadness</p>
 	       			<p class ="item-number">Item: #2502</p>
 	       	</div>
 
 			<div class = "item-box">
-				<img class="multi-item" src = "img/Products/Funko/disgust.png" alt"Disgust Funko with box">
+				<a href ="view-item.html"><img class="multi-item" src = "img/Products/Funko/disgust.png" alt"Disgust Funko with box"></a>
 					<p class ="offer-label"> New!</p>
 					<p class ="item-name">Pop! Disney: Disgust</p>
 	       			<p class ="item-number">Item: #2503</p>
 	       	</div>
 
 			<div class = "item-box item-box-last">
-				<img class="multi-item" src = "img/Products/Funko/anger.png" alt="anger Funko with box">
+				<a href ="view-item.html"><img class="multi-item" src = "img/Products/Funko/anger.png" alt="anger Funko with box"></a>
 					<p class ="offer-label"> New!</p>
 					<p class ="item-name">Pop! Disney: Anger</p>
 	       			<p class ="item-number">Item: #2501</p>
@@ -104,19 +105,19 @@
 	       	</div>
 
 	       	<div class = "item-box">
-				<img class="multi-item" src = "img/Products/Funko/batman.png" alt"Batman Funko with box">
+				<a href ="view-item.html"><img class="multi-item" src = "img/Products/Funko/batman.png" alt"Batman Funko with box"></a>
 					<p class ="item-name">Pop! Heroes: Batman</p>
 	       			<p class ="item-number">Item: #2503</p>
 	       	</div>
 
 			<div class = "item-box">
-				<img class="multi-item" src = "img/Products/Funko/spiderman.png" alt"spiderman funko with box">
+				<a href ="view-item.html"><img class="multi-item" src = "img/Products/Funko/spiderman.png" alt"spiderman funko with box"></a>
 					<p class ="item-name">Pop! Heroes: Spiderman</p>
 	       			<p class ="item-number">Item: #2504</p>
 	       	</div>
 
 			<div class = "item-box item-box-last">
-				<img class="multi-item" src = "img/Products/Funko/ironman.png" alt="ironman funko with box">
+				<a href ="view-item.html"><img class="multi-item" src = "img/Products/Funko/ironman.png" alt="ironman funko with box"></a>
 					<p class ="item-name">Pop! Heroes: Ironman</p>
 	       			<p class ="item-number">Item: #2505</p>
 	       	</div>
@@ -129,20 +130,20 @@
 	       	</div>
 
 	       	<div class = "item-box">
-				<img class="multi-item" src = "img/Products/Funko/honeylemon.png" alt"HoneyLemon Funko with box">
+				<a href ="view-item.html"><img class="multi-item" src = "img/Products/Funko/honeylemon.png" alt"HoneyLemon Funko with box"></a>
 					<p class ="offer-label sale"> Sale!</p>
 					<p class ="item-name">Pop! Disney: Honey Lemon</p>
 	       			<p class ="item-number">Item: #2206</p>
 	       	</div>
 
 			<div class = "item-box">
-				<img class="multi-item" src = "img/Products/Funko/fredflinstone.png" alt"Fred flinstone with box">
+				<a href ="view-item.html"><img class="multi-item" src = "img/Products/Funko/fredflinstone.png" alt"Fred flinstone with box"></a>
 					<p class ="item-name">Pop! Animation: Fred Flinstone</p>
 	       			<p class ="item-number">Item: #2201</p>
 	       	</div>
 
 			<div class = "item-box item-box-last">
-				<img class="multi-item" src = "img/Products/Funko/stewie.png" alt"stewie funko with box">
+				<a href ="view-item.html"><img class="multi-item" src = "img/Products/Funko/stewie.png" alt"stewie funko with box"></a>
 					<p class ="item-name">Pop! Animation: Stewie</p>
 	       			<p class ="item-number">Item: #2201</p>
 	       	</div>
