--- a/view-item.html
+++ b/view-item.html
@@ -110,19 +110,19 @@
 
 				<div class = "recommendation-box">	
 					<div class = "recommend-item-box">
-						<img class="multi-item" src = "img/Products/Funko/fear.png"  alt= "recommendation item of Fear funko with box">
+						<a href ="view-item.html"><img class="multi-item" src = "img/Products/Funko/fear.png"  alt= "recommendation item of Fear funko with box"></a>
 						<p class ="item-name">Pop! Disney: Fear</p>
 		       			<p class ="item-number">Item: #2210</p>
 		       		</div>
 
 		       		<div class = "recommend-item-box">
-						<img class="multi-item" src = "img/Products/Funko/anger.png" alt= "recommendation item of Anger Funko with box">
+						<a href ="view-item.html"><img class="multi-item" src = "img/Products/Funko/anger.png" alt= "recommendation item of Anger Funko with box"></a>
 						<p class ="item-name">Pop! Disney: Anger</p>
 		       			<p class ="item-number">Item: #2207</p>
 		       		</div>
 
 					<div class = "recommend-item-box">
-						<img class="multi-item" src = "img/Products/Funko/sadness.png" alt= "recommendation item of Sadness funko with box">
+						<a href ="view-item.html"><img class="multi-item" src = "img/Products/Funko/sadness.png" alt= "recommendation item of Sadness funko with box"></a>
 						<p class ="item-name">Pop! Disney: Sadness</p>
 		       			<p class ="item-number">Item: #2241</p>
 		       		</div>
