--- a/events.html
+++ b/events.html
@@ -6,7 +6,6 @@
 		<title>Funko! Pop Events</title>
 
 		<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet' type='text/css'>
-		<link href='http://fonts.googleapis.com/css?family=Crimson+Text' rel='stylesheet' type='text/css'>
 
 		<link rel="stylesheet" href="css/grid.css">
 		<link rel="stylesheet" href="css/main.css">
@@ -28,16 +27,19 @@
 		</header>
 
 		<section class = "banner">
-			<img src="img/banner-place.png" alt="banner image">
+			<img src="img/Events/event-banner.png" alt="banner image">
+			<div class = "banner-header">
+				<p class = "banner-title"> Events</p>
+				<p class = "banner-question"> Where are We Going?</p>
+			</div>
 		</section>
-
-		<h4 class="information-header" id="upcoming-e"> Upcoming events </h4>
 
 
 <!--EVENTS-->		
-		<section>
+		<section class = "events">
 
 			<div class="grid">
+				<h6 class= "section-header">Upcoming Events</h6>
 
 				<div class="grid-col-event">
 					<a href="events1.html"><img id="event-place" src="img/staff-place.jpg" height="200" width="200" alt="event photo"></a>
@@ -60,12 +62,12 @@
 					<img id="event-place" src="img/staff-place.jpg" height="200" width="200" alt="event photo">
 					<p class="sub-heading" id="event-name">Event name</p>
 				</div>
-
-				
+			
 			</div>
+		</section>
 
 <!--FOOTER-->
-		<section class = "footer">
+<section class = "footer">
 		<img class="footer-img" src="img/funko.png" height="50" width="100" alt="funko logo">
 		  <div class = "email">
 		   <form id="comments" method="post" action="#">
@@ -74,13 +76,15 @@
       </div>
 		
 		<div class ="footer-icons">
-			<img src="img/facebook.png" height ="30" width="30" alt="funko logo">
-			<img src="img/twitter.png" height ="30" width="30"alt="funko logo">
-			<img src="img/instagram.png" height ="30" width="30" alt="funko logo">
+			<img src="img/Footer/facebook.png" height ="30" width="30" alt="Facebook logo">
+			<img src="img/Footer/twitter.png" height ="30" width="30"alt="Twitter logo">
+			<img src="img/Footer/instagram.png" height ="30" width="30" alt="Instagram logo">
 		</div>
+
+		<div class = "extras">
+			<p class = "extra-content"> Content </p>
+			<p class = "extra-content"> Style Guide </p>
 		</section>
 <!--end of footer-->
-
-		</sdction>
 	</body>
 </html>
