--- a/products.html
+++ b/products.html
@@ -63,7 +63,7 @@
  				<form id="search-bar" method="post" action="#">
           		<input class="search comments" type="text" id="form-name" placeholder="Search">
           		</form>
-          		<a href="#"><img class = "search-button" src = "img/Products/search.png"></a>
+          		<a href="products.html"><img class = "search-button" src = "img/Products/search.png"></a>
           		</div>
           	</div>
 
