--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,11 @@
 		</header>
 
 		<section class = "banner">
-			<img src="img/banner-place.png" alt="banner image">
+			<img src="img/Contact/contact-banner.png" alt="contact banner image that shows a bunch of funko boxes">
+			<div class = "banner-header">
+				<p class = "banner-title"> Contact Us</p>
+				<p class = "banner-question"> Where to Find?</p>
+			</div>
 		</section>
 
 <!--MAP/INFO-->
@@ -82,7 +86,7 @@
 			</section>
 
 		<!--FOOTER-->
-		<section class = "footer">
+<section class = "footer">
 		<img class="footer-img" src="img/funko.png" height="50" width="100" alt="funko logo">
 		  <div class = "email">
 		   <form id="comments" method="post" action="#">
@@ -91,10 +95,14 @@
       </div>
 		
 		<div class ="footer-icons">
-			<img src="img/facebook.png" height ="30" width="30" alt="funko logo">
-			<img src="img/twitter.png" height ="30" width="30"alt="funko logo">
-			<img src="img/instagram.png" height ="30" width="30" alt="funko logo">
+			<img src="img/Footer/facebook.png" height ="30" width="30" alt="Facebook logo">
+			<img src="img/Footer/twitter.png" height ="30" width="30"alt="Twitter logo">
+			<img src="img/Footer/instagram.png" height ="30" width="30" alt="Instagram logo">
 		</div>
+
+		<div class = "extras">
+			<p class = "extra-content"> Content </p>
+			<p class = "extra-content"> Style Guide </p>
 		</section>
 <!--end of footer-->
 
