--- a/events1.html
+++ b/events1.html
@@ -70,7 +70,7 @@
 				<img src="img/Events/map.png" alt="Map of vancouver showing the convention center where the event is being held">
 				<div class="info">
 					<a class = "bold-color history-text">More Information:</a>
-					<p class="info">Vancouver Fan Expo Website </p>
+					<a href = "http://www.fanexpovancouver.com/"><p class="info">Vancouver Fan Expo Website </p></a>
 			</div>
 
 			</div>
