--- a/contact.html
+++ b/contact.html
@@ -32,31 +32,39 @@
 		<section class = "banner">
 			<img src="img/Contact/contact-banner.png" alt="contact banner image that shows a bunch of funko boxes">
 			<div class = "banner-header">
-				<p class = "banner-title"> Contact Us</p>
+				<p class = "banner-title"> Contact</p>
 				<p class = "banner-question"> Where to Find?</p>
 			</div>
 		</section>
 
 <!--MAP/INFO-->
-		<section>
+		<section class = "contact-details">
 			<!--MAP-->
-			<div class="grid">
-				<div class="grid-col-half">
-					<img class="picture-place" src="img/picture-place.png" height="250" width="400" alt="map">
+			<div class="contact">
+				<h6 class= "section-header">Funko Pop!</h6>
+				<div class="grid-col-one">
+
+					<img class="store-picture" src="img/Contact/store.png" alt="map">
 				</div>
 			
 				<!--STORE INFO-->
-				<div class="grid-col-30" >
-					<h3 class="big-header" id="contact-h"> Funko! Pop</h3>
-					<p class="information-header" id="contact-info"> 123 Granville Street <br> Vancouver, B.C. </p>
-					<p class="information-header" id="contact-info">604 123 4567</p>
-				</div>
-			</div>
 
-			<hr>
+					<div class ="store-details">
+					<p class=" store-details store-text"><a class = "bold-color store-text">Location:</a> Vancouver Convention Center
+					<br>1055 Canada Place, <br>Vancouver, BC <br>V6C 0C3</p>
+					</div>
+
+					<div class ="store-details">
+					<p class=" store-details store-text"><a class = "bold-color history-text">General:</a> vancouverstore@funkopop.com</p><p>604 123 4466</p>
+					</div>
+				</div>
+
+			<!-- </div> -->
+
+</section>
 			
 <!--FORM/CONTACT-->
-			<section>
+			<section class = "contact-us">
 
 				<div class="center">
 				<h6 class="small-header"> Got a Question? Ask Us! </h6>
@@ -70,7 +78,7 @@
 
 						<input class="con-comments" type="text" id="form-mail" placeholder="Email">
 
-						<textarea class="con-comments" id="form-comment" placeholder="Message:"></textarea>
+						<textarea class="con-comments" id="con-comment" placeholder="Message:"></textarea>
 					</form>
 				
 				
@@ -103,3 +111,11 @@
 			
 	</body>
 </html>
+
+	<!-- This is just in here to avoid loading and weird button expansion when refreshing the page -->
+<script>
+    window.addEventListener('load', function load() {
+    window.removeEventListener('load', load, false);
+    document.body.classList.remove('load');
+  }, false);
+</script>
